--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Khalid Tawohid | @voscra </title>
+    <title> Khalid Tawohid | Software Engineer </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <style>
             body{
@@ -32,8 +32,8 @@
   <body>
     <div id="gradient" />
     <div class="centered">
-    <h1>VOSCRA<h1/>
-      <p>khalid@voscra.com</p>
+    <h1>KHALID TAWOHID<h1/>
+      <p>khalid@tawohid.com</p>
      </div>
  </body>
  <script>
