--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Khalid Tawohid | voscra </title>
+    <title> Khalid Tawohid | Software Engineer </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <style>
             body{
